FINALLY FIXED OVERFLOW ON HOMEPAGE

--- a/css/main.css
+++ b/css/main.css
@@ -228,7 +228,7 @@ footer a:hover {
     -webkit-box-align: top;
     -ms-flex-align: top;
     align-items: top;
-    width: auto;
+    width: 98vw;
     padding: 1vw;
 }
 footer table {
@@ -284,15 +284,16 @@ body.stickyFooter {
 /***** HOMEPAGE *****/
 /***** FULLSCREEN HOMEPAGE IMAGE/VIDEO & TITLE *****/
 #homeFullscrContainer {
+    position: relative;
     margin-top: -2.5rem;
     width: 100vw;
     height: 100vh;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 video#homeVideoBkg {
     position: absolute;
     top: 50%; left: 50%;
-    min-width: 100%;
+    min-height: 100%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     z-index: -2;
